Debugged all game.model tests, fixed Round, Game and player classes